# qq

SPQR_TEST/: CMakeLists.txt  SPQR_TEST.kdev4  main.cpp
SPQR_TEST/.kdev4/: SPQR_TEST.kdev4
how_find_pkg/hello/: hello.cpp
how_find_pkg/hello/cmake/: hello-config.cmake
how_find_pkg/usehello/: CMakeLists.txt
temp/how_find_pkg/hello/: CMakeLists.txt  hello.h
temp/how_find_pkg/usehello/: .CMakeLists.txt.swp  main.cpp
